--- a/modify.html
+++ b/modify.html
@@ -72,7 +72,7 @@
         });
 
         //DB에서 가져온 데이터 화면에 보여주기
-         $("#name").val(name);
+        $("#name").val(name);
         $("#mbti").val(mbti);
         $("#pw").val(pw);
         $("#img").val(img);
@@ -82,6 +82,76 @@
         $("#word").val(word);
         $("#intro").val(intro);
         $("#date").val(date);
+
+        // 현재 날짜, 시간 을 "YYYY-MM-DD hh:mm:ss" format 으로 변경하는 function
+        function dateFormat(date) {
+
+            let dateFormat = date.getFullYear() +
+
+                '-' + ((date.getMonth() + 1) < 9 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1)) +
+                '-' + ((date.getDate()) < 9 ? "0" + (date.getDate()) : (date.getDate())) +
+                ' ' + ((date.getHours()) < 9 ? "0" + (date.getHours()) : (date.getHours())) +
+                ':' + ((date.getMinutes()) < 9 ? "0" + (date.getMinutes()) : (date.getMinutes())) +
+                ':' + ((date.getSeconds()) < 9 ? "0" + (date.getSeconds()) : (date.getSeconds()));
+
+            return dateFormat;
+        }
+
+        console.log(dateFormat(new Date())); // 날짜 형식 변환 테스트 완료
+
+        //글 내용 수정 된 거 DB에 업데이트
+        $('#write').click(async function () {
+
+            let name_change = $('#name').val();
+            let mbti_change = $('#mbti').val();
+            // let pw_change = $('#pw').val();
+            let img_change = $('#img').val();
+            let blog_change = $('#blog').val();
+            let github_change = $('#github').val();
+            let word_change = $('#word').val();
+            let intro_change = $('#intro').val();
+            let date_change = $('#date').val();
+
+            const storage = getStorage(app);
+
+            //// img 선택 시
+            // const file = document.querySelector('#img').files[0];
+            // let img_new;
+
+            // const storageRef = ref(storage, 'images/' + file.name + date2); // 사진을 업로드하고
+            // uploadBytes(storageRef, file).then((snapshot) => {
+            //     console.log('Uploaded a blob or file!');
+
+            //     getDownloadURL(snapshot.ref).then((url) => { // url을 받는다
+            //         console.log('File available at', url);
+            //         // ...
+            //         img_new = url;
+            //     }).then(async () => {
+            //         const minpRef = doc(db, "minp", "post" + date_id);
+
+            //         await updateDoc(minpRef, {
+            //             title: titleRef,
+            //             content: contentRef,
+            //             img: img_new
+            //         });
+
+            //         console.log("img  :", img_new);
+            //         location.href = `./show.html?date_id=${date_id}`;
+            //         alert('작성 완료'); // 작성 완료라는 알람을 띄운다
+            //     })
+            // });
+            //
+
+            const minpRef = doc(db, "post", "post" + date_id);
+
+            await updateDoc(minpRef, {
+                title: titleRef,
+                content: contentRef,
+                img: img
+            });
+
+            location.href = `./show.html?date_id=${date_id}`;
+        });
 
     </script>
 
