--- a/show.html
+++ b/show.html
@@ -27,9 +27,9 @@
       </div>
     </div>
 
-    <div class="write-container-img">
+    <div class="show-container-img">
       <label for="img">사진</label>
-      <div class="write-container-thumbnail">
+      <div class="show-container-thumbnail">
         <img id="thumbnail" alt="..." src="" />
       </div>
     </div>
