--- a/modify.html
+++ b/modify.html
@@ -52,7 +52,7 @@
         //DB에서 id 값에 맞는 특정 데이터 가져오기
         const q = query(
             collection(db, 'post'),
-            where('date', '==', Keydata)
+            // where('date', '==', Keydata)
         );
         const querySnapshot = await getDocs(q);
 
@@ -76,8 +76,10 @@
         $("#name").val(name);
         $("#mbti").val(mbti);
         $("#pw").val(pw);
-        $("#img").val(img);
-        $("#picture").attr("src", img);
+        //$("#img").val(img);
+        $("#img2").val(img);
+        //$("#picture").attr("src", img);
+        $("#thumbnail").attr("src", img);
         $("#blog").val(blog);
         $("#github").val(github);
         $("#word").val(word);
@@ -100,59 +102,59 @@
 
         console.log(dateFormat(new Date())); // 날짜 형식 변환 테스트 완료
 
-        //글 내용 수정 된 거 DB에 업데이트
-        $('#write').click(async function () {
+        // //글 내용 수정 된 거 DB에 업데이트
+        // $('#write').click(async function () {
 
-            let name_change = $('#name').val();
-            let mbti_change = $('#mbti').val();
-            // let pw_change = $('#pw').val();
-            let img_change = $('#img').val();
-            let blog_change = $('#blog').val();
-            let github_change = $('#github').val();
-            let word_change = $('#word').val();
-            let intro_change = $('#intro').val();
-            let date_change = $('#date').val();
+        //     let name_change = $('#name').val();
+        //     let mbti_change = $('#mbti').val();
+        //     // let pw_change = $('#pw').val();
+        //     let img_change = $('#img').val();
+        //     let blog_change = $('#blog').val();
+        //     let github_change = $('#github').val();
+        //     let word_change = $('#word').val();
+        //     let intro_change = $('#intro').val();
+        //     let date_change = $('#date').val();
 
-            const storage = getStorage(app);
+        //     const storage = getStorage(app);
 
-            //// img 선택 시
-            // const file = document.querySelector('#img').files[0];
-            // let img_new;
+        //     //// img 선택 시
+        //     // const file = document.querySelector('#img').files[0];
+        //     // let img_new;
 
-            // const storageRef = ref(storage, 'images/' + file.name + date2); // 사진을 업로드하고
-            // uploadBytes(storageRef, file).then((snapshot) => {
-            //     console.log('Uploaded a blob or file!');
+        //     // const storageRef = ref(storage, 'images/' + file.name + date2); // 사진을 업로드하고
+        //     // uploadBytes(storageRef, file).then((snapshot) => {
+        //     //     console.log('Uploaded a blob or file!');
 
-            //     getDownloadURL(snapshot.ref).then((url) => { // url을 받는다
-            //         console.log('File available at', url);
-            //         // ...
-            //         img_new = url;
-            //     }).then(async () => {
-            //         const minpRef = doc(db, "minp", "post" + date_id);
+        //     //     getDownloadURL(snapshot.ref).then((url) => { // url을 받는다
+        //     //         console.log('File available at', url);
+        //     //         // ...
+        //     //         img_new = url;
+        //     //     }).then(async () => {
+        //     //         const minpRef = doc(db, "minp", "post" + date_id);
 
-            //         await updateDoc(minpRef, {
-            //             title: titleRef,
-            //             content: contentRef,
-            //             img: img_new
-            //         });
+        //     //         await updateDoc(minpRef, {
+        //     //             title: titleRef,
+        //     //             content: contentRef,
+        //     //             img: img_new
+        //     //         });
 
-            //         console.log("img  :", img_new);
-            //         location.href = `./show.html?date_id=${date_id}`;
-            //         alert('작성 완료'); // 작성 완료라는 알람을 띄운다
-            //     })
-            // });
-            //
+        //     //         console.log("img  :", img_new);
+        //     //         location.href = `./show.html?date_id=${date_id}`;
+        //     //         alert('작성 완료'); // 작성 완료라는 알람을 띄운다
+        //     //     })
+        //     // });
+        //     //
 
-            const minpRef = doc(db, "post", "post" + date_id);
+        //     const minpRef = doc(db, "post", "post" + date_id);
 
-            await updateDoc(minpRef, {
-                title: titleRef,
-                content: contentRef,
-                img: img
-            });
+        //     await updateDoc(minpRef, {
+        //         title: titleRef,
+        //         content: contentRef,
+        //         img: img
+        //     });
 
-            location.href = `./show.html?date_id=${date_id}`;
-        });
+        //     location.href = `./show.html?date_id=${date_id}`;
+        // });
 
     </script>
 
@@ -188,9 +190,9 @@
             </div>
         </div>
 
-        <div class="modify-main-container">
-            <label for="img">이미지</label>
-            <input id="img" class="modify-main-container-title" type="text" placeholder="이미지 링크 주소를 입력해주세요" />
+        <div id="imgbox", class="modify-main-container">
+            <label for="img2">이미지</label>
+            <input id="img2" class="modify-main-container-title" type="text" placeholder="이미지 링크 주소를 입력해주세요" />
             <img id="picture" src="" class="card-img-top" alt="...">
         </div>
 
