modify.html DB데이터 1개 조회기능 완료

--- a/modify.html
+++ b/modify.html
@@ -75,7 +75,7 @@
         //DB에서 가져온 데이터 화면에 보여주기
         $("#name").val(name);
         $("#mbti").val(mbti);
-        $("#pw").val(pw);
+        //$("#pw").val(pw);
         //$("#img").val(img);
         $("#img2").val(img);
         //$("#picture").attr("src", img);
