상단바 글쓰기 추가, 기능구현

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 150px;
             /*로고 높이 150*/
             color: black;
-            /*텍스트 색상 : white*/
+            /*텍스트 색상 : black*/
 
             display: flex;
             /* flexbox 레이아웃을 사용하여 요소를 가운데 정렬 */
@@ -98,13 +98,15 @@
     <div class="title_logo">
         <h1>오브젝트</h1>
     </div>
+
     <!-- /상단바 -->
     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-5">
-        <li><a href="#" class="nav-link px-2 text-secondary">오브젝트</a></li>
-        <li><a href="#" class="nav-link px-2 text-secondary">팀원소개</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">팀목표</a></li>
+        <li><a href="#" class="nav-link px-2 text-secondary">팀원소개</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">방명록</a></li>
+        <li><a href="write.html" class="nav-link px-2 text-secondary">글쓰기</a></li>
     </ul>
+    
     <!-- 팀 카드 -->
     <div class="row row-cols-1 row-cols-md-5 g-4">
         <div class="col">
