--- a/index.html
+++ b/index.html
@@ -7,101 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
     <link rel="stylesheet" href="./css/index.css" />
-    <script type="module">
-        // Firebase SDK 라이브러리 가져오기
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-        import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { query } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-
-        // Firebase 구성정보 설정
-        const firebaseConfig = {
-            apiKey: "AIzaSyB3ookWJ_UhcAQN3g_GFe8igPGrRhhSEPM",
-            authDomain: "object-4dce6.firebaseapp.com",
-            projectId: "object-4dce6",
-            storageBucket: "object-4dce6.appspot.com",
-            messagingSenderId: "1016569423981",
-            appId: "1:1016569423981:web:4742c10d53bc9ad4ef7764",
-            measurementId: "G-2ND0Q8WYC3"
-        };
-
-        // Firebase 인스턴스 초기화
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
-        //방명록 Firebase 저장
-        $('#Writingbtn').click(async function () {
-
-            let name = $('#name').val();
-            let comment = $('#comment').val();
-
-            let doc = {
-                'name': name,
-                'comment': comment
-            };
-            await addDoc(collection(db, "guest"), doc);
-            alert('작성완료!');
-            window.location.reload();
-        })
-
-        // 현재 날짜, 시간 을 "YYYY-MM-DD hh:mm:ss" format 으로 변경하는 function
-        function dateFormat(date) {
-
-            let dateFormat = date.getFullYear() +
-
-                '-' + ((date.getMonth() + 1) < 9 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1)) +
-                '-' + ((date.getDate()) < 9 ? "0" + (date.getDate()) : (date.getDate())) +
-                ' ' + ((date.getHours()) < 9 ? "0" + (date.getHours()) : (date.getHours())) +
-                ':' + ((date.getMinutes()) < 9 ? "0" + (date.getMinutes()) : (date.getMinutes())) +
-                ':' + ((date.getSeconds()) < 9 ? "0" + (date.getSeconds()) : (date.getSeconds()));
-
-            return dateFormat;
-        }
-
-        console.log(dateFormat(new Date())); // 날짜 형식 변환 테스트 완료
-
-
-
-        // //Firebase에서 게시물 정보 가져와서 카드 붙이기
-        let doc = await getDocs(collection(db, "post"));
-        docs.forEach((doc) => {
-            let row = doc.data();
-
-            let date = row['date'];
-            let img = row['img'];
-            let name = row['name'];
-            let word = row['word'];
-            console.log(row);
-
-            let temp_html = `
-            <div class="col">
-            <a herf=".show.html?id=${date}"><div class="card">
-                <img src="${img}"class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">${name}</h5>
-                    <p class="card-text">${word}</p>
-                    </div>
-                </div></a>
-            </div>`;
-            $('#card').append(temp_html);
-        })
-
-
-        // // //카드 클릭시 show.html 페이지로 이동
-        // $(document).ready(function () {
-        //     $('#').on('click', function () {
-        //         // const URLSearchParams = new URLSearchParams(location.search).get('date');
-        //         // const date = $(this).data('date')
-        //         // console.log('date', date);
-        //         let date = "20240417"
-        //         const url = `./write.html?id=${date}`;
-        //         // console.log('url', url);
-        //         // window.location.href = url;
-        //     })
-        // })
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <div class="main-header-container">
@@ -126,7 +36,11 @@
     </header>
 
     <main>
-        <section class="section-member">
+        <div class="mycards">
+            <div id="card" class="row row-cols-1 row-cols-md-3 g-3">
+
+            </div>
+            <!-- <section class="section-member">
             <ul>
                 <li class="section-member-card">
                     <div>
@@ -143,7 +57,9 @@
                         </div>
                         <div class="section-member-card-intro">
                             <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</div>
+                            <div class="section-member-card-intro-intro">
+                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
+                            </div>
                         </div>
                     </div>
                     <div class="section-member-card-site">
@@ -167,7 +83,9 @@
                         </div>
                         <div class="section-member-card-intro">
                             <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</div>
+                            <div class="section-member-card-intro-intro">
+                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
+                            </div>
                         </div>
                     </div>
                     <div class="section-member-card-site">
@@ -191,7 +109,9 @@
                         </div>
                         <div class="section-member-card-intro">
                             <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</div>
+                            <div class="section-member-card-intro-intro">
+                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
+                            </div>
                         </div>
                     </div>
                     <div class="section-member-card-site">
@@ -215,7 +135,9 @@
                         </div>
                         <div class="section-member-card-intro">
                             <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</div>
+                            <div class="section-member-card-intro-intro">
+                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
+                            </div>
                         </div>
                     </div>
                     <div class="section-member-card-site">
@@ -239,7 +161,9 @@
                         </div>
                         <div class="section-member-card-intro">
                             <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개</div>
+                            <div class="section-member-card-intro-intro">
+                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
+                            </div>
                         </div>
                     </div>
                     <div class="section-member-card-site">
@@ -247,8 +171,8 @@
                         <div><a>https://velog.io/</a></div>
                     </div>
                 </li>
-            </ul>
-        </section>
+            </ul> -->
+            </section>
     </main>
 
     <section class="section-team">
@@ -300,48 +224,126 @@
                     <textarea id="comment" placeholder="방명록을 입력해주세요"></textarea>
                 </div>
             </div>
-            <div class="section-guest-container-btn">
+            <div id="Writingbtn" class="section-guest-container-btn">
                 <button class="section-guest-container-btn-add">등록하기</button>
             </div>
         </div>
 
-        <ul class="section-guest-list">
-            <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다</div>
-                </div>
-            </li>
-
-            <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다</div>
-                </div>
-            </li>
-
-            <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다</div>
-                </div>
-            </li>
-        </ul>
     </section>
 
-    
+    <script type="module">
+        // Firebase SDK 라이브러리 가져오기
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+        import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { query } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+
+        // Firebase 구성정보 설정
+        const firebaseConfig = {
+
+            apiKey: "AIzaSyB3ookWJ_UhcAQN3g_GFe8igPGrRhhSEPM",
+            authDomain: "object-4dce6.firebaseapp.com",
+            projectId: "object-4dce6",
+            storageBucket: "object-4dce6.appspot.com",
+            messagingSenderId: "1016569423981",
+            appId: "1:1016569423981:web:4742c10d53bc9ad4ef7764",
+            measurementId: "G-2ND0Q8WYC3"
+
+        };
+
+        // Firebase 인스턴스 초기화
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        //방명록 Firebase 저장
+        $('#Writingbtn').click(async function () {
+
+            let name = $('#name').val();
+            let comment = $('#comment').val();
+
+            let doc = {
+                'name': name,
+                'comment': comment
+            };
+            await addDoc(collection(db, "guest"), doc);
+            alert('작성완료!');
+            window.location.reload();
+        })
+
+        // 현재 날짜, 시간 을 "YYYY-MM-DD hh:mm:ss" format 으로 변경하는 function
+        // function dateFormat(date) {
+
+        //     let dateFormat = date.getFullYear() +
+
+        //         '-' + ((date.getMonth() + 1) < 9 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1)) +
+        //         '-' + ((date.getDate()) < 9 ? "0" + (date.getDate()) : (date.getDate())) +
+        //         ' ' + ((date.getHours()) < 9 ? "0" + (date.getHours()) : (date.getHours())) +
+        //         ':' + ((date.getMinutes()) < 9 ? "0" + (date.getMinutes()) : (date.getMinutes())) +
+        //         ':' + ((date.getSeconds()) < 9 ? "0" + (date.getSeconds()) : (date.getSeconds()));
+
+        //     return dateFormat;
+        // }
+
+        // console.log(dateFormat(new Date())); // 날짜 형식 변환 테스트 완료
+
+
+
+        // //Firebase에서 게시물 정보 가져와서 카드 붙이기
+        let doc = await getDocs(collection(db, "post"));
+        doc.forEach((doc) => {
+            let row = doc.data();
+
+            let img = row['img'];
+            let name = row['name'];
+            let mbti = row['mbti'];
+            let date = row['date'];
+            let word = row['word'];
+            let intro = row['intro'];
+            let github = row['github'];
+            let blog = row['blog'];
+            let id = row['id'];
+            console.log(row);
+
+            let temp_html = `
+            <div class="col">
+                <a herf='./show.html'><div id="card">
+                <div class="card h-100">
+                    <img src="${img}"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">${name}</h5>
+                        <p class="card-text">${mbti}</p>
+                        <p class="card-text">${word}</p>
+                        <p class="card-text">${intro}</p>
+                    </div>
+                </div>
+            </div>
+            </div></a>`;
+            $('#card').append(temp_html);
+        })
+
+
+
+
+
+//         // // //카드 클릭시 show.html 페이지로 이동
+//         $(document).ready(function () {
+//     $('#card').on('click', function () {
+//         // 현재 URL의 쿼리스트링에서 id 값을 가져옵니다.
+//         const params = new URLSearchParams(location.search).get('id');
+//         const id = params.get('id');
+
+//         if (id) {
+//             const url = './show.html?id=${id}'; 
+//             window.location.href = url;  
+//         } else {
+//             console.log('ID 값이 없습니다.');
+//         }
+//     });
+// });
+
+    </script>
 
 </body>
 
