--- a/show.html
+++ b/show.html
@@ -65,56 +65,152 @@
           <input id="replyName" type="text" placeholder="이름" />
         </div>
         <div>
-          <label for="comment">방명록</label>
-          <textarea id="comment" placeholder="방명록을 입력해주세요"></textarea>
+          <label for="comment">댓글</label>
+          <textarea id="comment" placeholder="댓글을 입력해주세요"></textarea>
         </div>
       </div>
       <div class="section-reply-container-btn">
-        <button class="section-reply-container-btn-add">등록하기</button>
+        <button id="registrationBtn" class="section-reply-container-btn-add">등록하기</button>
       </div>
     </div>
-
-    <ul class="section-reply-list">
-      <li>
-        <div class="section-reply-list-container">
-          <div class="section-reply-list-container-flex">
-            <div class="section-reply-list-name">유균한</div>
-            <span class="side-margin5">·</span>
-            <div class="section-reply-list-date">2024-02-05</div>
-          </div>
-          <div class="section-reply-list-content">
-            댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="section-reply-list-container">
-          <div class="section-reply-list-container-flex">
-            <div class="section-reply-list-name">유균한</div>
-            <span class="side-margin5">·</span>
-            <div class="section-reply-list-date">2024-02-05</div>
-          </div>
-          <div class="section-reply-list-content">
-            댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="section-reply-list-container">
-          <div class="section-reply-list-container-flex">
-            <div class="section-reply-list-name">유균한</div>
-            <span class="side-margin5">·</span>
-            <div class="section-reply-list-date">2024-02-05</div>
-          </div>
-          <div class="section-reply-list-content">
-            댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-          </div>
-        </div>
-      </li>
+    
+    <ul id="replyList" class="section-reply-list">
+      
     </ul>
   </section>
+
+  <script type="module">
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs, query, where, orderBy } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyC5fyxcmxqsTSQQf8fDUGSXrBnloDB6aYA",
+      authDomain: "sparta-5784d.firebaseapp.com",
+      projectId: "sparta-5784d",
+      storageBucket: "sparta-5784d.appspot.com",
+      messagingSenderId: "853122067267",
+      appId: "1:853122067267:web:a0ca2f1cd399c002751df6"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    function getDateFormat() {
+
+      let now = new Date();
+      let year = now.getFullYear();
+      let month = now.getMonth() + 1 < 10 ? `0${now.getMonth() + 1}` : now.getMonth() + 1;
+      let date = now.getDate() < 10 ? `0${now.getDate()}` : now.getDate();
+      let hours = now.getHours() < 10 ? `0${now.getHours()}` : now.getHours();
+      let min = now.getMinutes() < 10 ? `0${now.getMinutes()}` : now.getMinutes();
+      let sec = now.getSeconds() < 10 ? `0${now.getSeconds()}` : now.getSeconds();
+      let today = `${year}-${month}-${date}`;
+      let id = `${year}${month}${date}${hours}${min}${sec}`;
+
+      return [today, id];
+    }
+
+    // const q = query(
+    //   collection(db, "reply"),
+    //   where("postID", "==", querystring id값),
+    //   orderBy("id")
+    // );
+    const q = query(collection(db, "reply"), orderBy("id"))
+    let replyList = await getDocs(q);
+
+    replyList.forEach( (el) => {
+
+      let data = el.data();
+
+      let html = `<li id=${data.id}>
+        <div class="section-reply-list-container">
+          <div class="section-reply-list-container-flex">
+            <div class="section-reply-list-name">${data.name}</div>
+            <span class="side-margin5">·</span>
+            <div class="section-reply-list-date">${data.date}</div>
+            <button type="button">삭제</button>
+          </div>
+          <div class="section-reply-list-content">
+            ${data.comment}
+          </div>
+          <div class="show-reply-modal">
+            <div>
+              <input type="password" placeholder="비밀번호를 입력해주세요" />
+            </div>
+            <div class="show-reply-modal-flex">
+              <button class="show-reply-modal-cancle">취소</button>
+              <button class="show-reply-modal-check">확인</button>
+            </div>
+          </div>
+        </div>
+      </li>`;
+
+      $("#replyList").append(html);
+
+    });
+
+    $("#registrationBtn").on("click",async function () {
+
+      let name = $("#replyName").val();
+      let comment = $("#comment").val();
+
+      if (!name || !comment) {
+        alert("이름과 댓글을 모두 입력해주세요");
+
+        return
+      }
+
+      let [date, id] = getDateFormat();
+      let data = {
+        "id": id,
+        "name": name,
+        "comment": comment,
+        "date": date,
+        // index에서 show페이지 보내기 완료되면 해당 querystring id값 가져와서 넣어주기
+        // "postID": querystring id값
+      };
+
+      await addDoc(collection(db, "reply"), data);
+
+      let html = `<li id=${data.id}>
+        <div class="section-reply-list-container">
+          <div class="section-reply-list-container-flex">
+            <div class="section-reply-list-name">${data.name}</div>
+            <span class="side-margin5">·</span>
+            <div class="section-reply-list-date">${data.date}</div>
+            <button type="button">삭제</button>
+          </div>
+          <div class="section-reply-list-content">
+            ${data.comment}
+          </div>
+          <div class="show-reply-modal">
+            <div>
+              <input type="password" placeholder="비밀번호를 입력해주세요" />
+            </div>
+            <div class="show-reply-modal-flex">
+              <button id="replyModalCancle" class="show-reply-modal-cancle">취소</button>
+              <button id="replyModalCheck" class="show-reply-modal-check">확인</button>
+            </div>
+          </div>
+        </div>
+      </li>`;
+
+      $("#replyList").append(html);
+
+    });
+
+    $("#replyList > li div.section-reply-list-container-flex > button").on("click", function () {
+      $(this).parent().parent().find(".show-reply-modal").toggle();
+      console.log($(this).parent().parent().find(".show-reply-modal > div.show-reply-modal-flex > button.show-reply-modal-cancle"))
+      // $(this).parent().parent().find(".show-reply-modal > div.show-reply-modal-flex > button#replyModalCancle")
+    });
+
+    // $().on("click", function () {
+
+    // });
+
+  </script>
 </body>
 
 </html>
